Add analysis and finish notebook

--- a/10_Independent_Lab_Lannen.ipynb
+++ b/10_Independent_Lab_Lannen.ipynb
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "1c0228b2-ff28-4a0e-8ad2-8691fbe1cff0",
    "metadata": {},
    "outputs": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "17863f95-e4c5-4d9f-a7b6-eb508e6d3e29",
    "metadata": {},
    "outputs": [
@@ -815,9 +815,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14c857a9-2249-4a8d-a450-38b95cbfe9fb",
+   "metadata": {},
+   "source": [
+    "## Analysis\n",
+    "I'd recommend using the third tree (TypeControl) as this target variable defines who funds/runs the hospital. The trees that predict Operating Income and Operating Revenue use monetary amounts that come from similar sources. As such, it's not easy to tell which source of revenu is the more important factor.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0888df6-d7f3-4a5c-92d6-70c15370f658",
+   "id": "37d05c2e-b46b-4917-9f20-bed573431394",
    "metadata": {},
    "outputs": [],
    "source": []
