--- a/10_Independent_Lab_Lannen.ipynb
+++ b/10_Independent_Lab_Lannen.ipynb
@@ -824,9 +824,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f145cafc-b9da-40ea-81a6-b00c859895fc",
+   "metadata": {},
+   "source": [
+    "## Sources\n",
+    "[ChatGPT](https://github.com/MarkLannen/week10labs/blob/main/assets/ChatGPT_Indpendent_Lab.pdf)  \n",
+    "[Instructor walkthrough](https://github.com/MarkLannen/week10labs/blob/main/10_Independent_Lab_Walkthrough.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d05c2e-b46b-4917-9f20-bed573431394",
+   "id": "2403f54d-b96e-46b9-9ec5-a6db8006163d",
    "metadata": {},
    "outputs": [],
    "source": []
