add sources to Instructor Led Lab

--- a/10_Instructor_Lab_Lannen.ipynb
+++ b/10_Instructor_Lab_Lannen.ipynb
@@ -1897,9 +1897,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "449e9f40-3e25-4331-b99c-2b5a95968e8c",
+   "metadata": {},
+   "source": [
+    "## Sources\n",
+    "[ChatGPT](https://github.com/MarkLannen/week10labs/blob/main/assets/ChatGPT_Instructor_Lab.pdf)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d31682f-2934-4960-82d0-3cdffcb5cc94",
+   "id": "0b8f22e6-eef3-497f-966a-79ecb74f1e2d",
    "metadata": {},
    "outputs": [],
    "source": []
